--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,198 +1,246 @@
 # .github/workflows/main.yaml
 
-name: "Terraform CI/CD Workflow" # ワークフロー名
+name: "Terraform CI/CD Workflow" # ワークフロー名をより包括的なものに変更
 
-# ★修正★ ワークフローがトリガーされるイベントを設定
+# ワークフローがトリガーされるイベントを設定
 on:
-  pull_request: # Pull Request イベントでトリガー
-    types: [opened, reopened, synchronize] # PRオープン、再オープン、新しいコミットのプッシュ時に実行
+  push:
     branches:
-      - master # PRのターゲットブランチが master の場合のみ実行
-
-    # 必要に応じて、特定のファイルパスに変更があった場合のみトリガーするpathsフィルターも追加できます。
-    # 例: リポジトリ内の任意の.tfファイルに変更があった場合のみトリガー
-    # paths:
+      - master # masterブランチへのプッシュでトリガー (マージを含む)
+  pull_request:
+    types: [opened, reopened, synchronize] # PRオープン、再オープン、同期（新しいコミット）でトリガー
+    branches:
+      - master # PRのターゲットブランチがmasterの場合
+    # paths: # pathsフィルターはトリガーレベルでも可能ですが、後述のアクションでより柔軟に扱います
     #   - "**/*.tf"
+  issue_comment: # ★追加★ コメント作成イベントでトリガー
+    types: [created] # 新しいコメントが作成されたときにトリガー
 
 # ジョブがワークフロー中に持つ権限を設定
 # comments: write はPRにコメントするために必要です。
 # contents: read はコードをチェックアウトするために必要です。
-# pull-requests: write はPRの状態を読み取るために必要になる場合があります。
-# issues: write はコメントに関連する場合に必要になる場合があります。
+# pull-requests: write はPRの状態（マージ可能性など）を読み取るために必要になる場合があります。
+# issues: write はコメントに関連する場合（コメントの編集/削除など）に必要になる場合があります。
 permissions:
-  contents: read # コードチェックアウトに必要
-  pull-requests: write # PRにコメントするために必要
-  issues: write # PRにコメントするために必要 (pull-requests write と合わせてコメント投稿に必要な場合あり)
+  contents: read
+  pull-requests: write
+  issues: write # コメントトリガーの場合に推奨
 
 jobs:
-  terraform-checks: # ジョブ名を分かりやすく変更 (例: terraform-checks)
-    name: 'Terraform Checks for ${{ matrix.directory }}' # matrixのディレクトリ名をジョブ名に含める
-    runs-on: ubuntu-latest # 実行環境
+  terraform: # ジョブ名をより一般的なものに変更
+    runs-on: ubuntu-latest # 実行環境としてUbuntuの最新版を使用
 
-    strategy:
-      matrix:
-        # Terraformコードが存在するディレクトリを指定します。
-        # 'environments/dev' ディレクトリのTerraformコードに対してジョブが実行されます。
-        directory: ['environments/dev'] # ご提示のmatrix設定をそのまま使用
-        # 例: 他の環境も追加する場合
-        # directory: ['environments/dev', 'environments/stg', 'environments/prod']
-
-      # matrixジョブ全体の設定 (特定のmatrixジョブが失敗しても他のジョブを続行するかなど)
-      fail-fast: false # デフォルトはtrue。falseにすると、あるmatrixジョブが失敗しても他のジョブは続行。
-
-    defaults:
-      run:
-        # このジョブ内の全ての run ステップは、ここで指定されたディレクトリで実行されます。
-        working-directory: ${{ matrix.directory }} # matrixで指定されたディレクトリを作業ディレクトリとする
+    env:
+      # AWS認証情報をGitHub Secretsから環境変数として設定
+      # これらのSecretsはリポジトリの設定で事前に登録しておく必要があります。
+      # この認証情報には、Terraform実行に必要なAWSリソースへの権限と、
+      # Remote State (S3+DynamoDBなど) へのアクセス権限が必要です。
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }} # ★修正★ secrets.secrets を secrets に修正
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # ★修正★ secrets.secrets を secrets に修正
+      AWS_REGION: ap-northeast-1 # 使用するAWSリージョンを指定 (例: 東京リージョン)
 
     steps:
       # -- コードチェックアウト --
-      # ★更新★ checkout アクションを最新バージョンに更新 (セキュリティと機能向上)
+      # リポジトリのコードをランナー環境にクローンします。
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          # プッシュ/PR時はデフォルト、コメント時はPRのHEADリファレンスをチェックアウト
+          # fetch-depth: 0 は差分比較のために全履歴を取得します。
+          ref: ${{ github.event_name == 'issue_comment' && github.event.issue.pull_request.head.ref || github.ref }}
+          fetch-depth: 0
 
-      # -- Terraformのセットアップ --
-      # ★更新★ setup-terraform アクションを最新バージョンに更新
+      # --- .tf ファイルの変更を検知 ---
+      # プッシュまたはPRイベントが発生する場合、dorny/paths-filter アクションを使用して、特定のパス/パターンのファイルに変更があったかチェックします。
+      - name: Check for .tf file changes
+        id: check-tf-changes # 後続ステップで結果を参照するためのID
+        uses: dorny/paths-filter@v3 # paths-filter アクションを使用します。
+        # ★条件★ プッシュ または PR イベントの場合のみこのステップを実行します。
+        # issue_comment イベントでは、ファイル変更検知は不要で、コメント内容のチェックを優先します。
+        if: (github.event_name == 'push' || github.event_name == 'pull_request') # ★修正★ if条件にカッコを追加
+        with:
+          # 変更を検知したいファイルのパターンを設定します。
+          # tf-changes という名前で出力され、変更があれば 'true'、なければ 'false' になります。
+          filters: |
+            tf-changes: # 出力変数名 (steps.check-tf-changes.outputs.tf-changes で参照)
+              - '**/*.tf' # リポジトリ内の任意の場所にある .tf ファイル
+
+      # --- コメントが '/terraform plan' かどうかチェック ---
+      # issue_comment イベントの場合のみ実行され、コメントが指定コマンドか判断します。
+      - name: Check Comment Command
+        id: check-comment-command # 後続ステップで結果を参照するためのID
+        # ★条件★ issue_comment イベントの場合のみこのステップを実行します。
+        if: github.event_name == 'issue_comment'
+        run: |
+          COMMENT_BODY="${{ github.event.comment.body }}"
+          IS_PLAN_COMMAND=false
+          if [[ "$COMMENT_BODY" == "/terraform plan" ]]; then
+            IS_PLAN_COMMAND=true
+          fi
+          # 結果を出力変数として設定します (steps.check-comment-command.outputs.is_plan_command で参照)
+          echo "is_plan_command=$IS_PLAN_COMMAND" >> "$GITHUB_OUTPUT"
+        shell: bash # スクリプト実行にbashを使用することを明示
+
+      # --- Terraformを実行すべきか最終判断 ---
+      # 前述のチェック結果とイベントタイプを元に、Terraformステップを実行すべきか最終判断を行います。
+      - name: Determine if Terraform Should Run
+        id: run-condition # 後続ステップで結果を参照するためのID
+        run: |
+          SHOULD_RUN=false # 初期値として、Terraformは実行しないと設定
+          EVENT_NAME="${{ github.event_name }}"
+
+          if [ "$EVENT_NAME" == "push" ]; then
+            # プッシュ時: check-tf-changes ステップの出力が 'true' の場合のみ実行
+            # check-tf-changes ステップは push または pull_request でしか実行されないため、
+            # push イベントの場合はこの条件だけで判断できます。
+            if [ "${{ steps.check-tf-changes.outputs.tf-changes }}" == "true" ]; then
+              SHOULD_RUN=true
+              echo "Trigger: Push with .tf changes detected."
+            else
+              echo "Trigger: Push without .tf changes. Skipping Terraform run."
+            fi
+          elif [ "$EVENT_NAME" == "pull_request" ]; then
+             # PRイベント: PRイベントであれば常にPlanを実行すると判断します。
+             # (もしPR時も変更がある場合のみ実行したいなら `${{ steps.check-tf-changes.outputs.tf-changes == 'true' }}` を条件に追加)
+            SHOULD_RUN=true
+            echo "Trigger: Pull Request event."
+          elif [ "$EVENT_NAME" == "issue_comment" ]; then
+            # コメントイベント: check-comment-command ステップの出力が 'true' の場合のみ実行
+            # check-comment-command ステップは issue_comment でしか実行されないため、
+            # issue_comment イベントの場合はこの条件だけで判断できます。
+            if [ "${{ steps.check-comment-command.outputs.is_plan_command }}" == "true" ]; then
+              SHOULD_RUN=true
+              echo "Trigger: '/terraform plan' command in comment detected."
+            else
+              echo "Trigger: Comment without command. Skipping Terraform run."
+            fi
+          fi
+
+          # 後続ステップで参照できるよう最終判断を出力します。
+          echo "should_run=$SHOULD_RUN" >> "$GITHUB_OUTPUT"
+        shell: bash # スクリプト実行にbashを使用することを明示
+
+      # --- Terraform実行ステップ群 ---
+      # これらのステップは、直前の Determine ステップで Terraform を実行すると判断された場合のみ実行します。
+
+      # Terraformのセットアップ
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
+        # ★条件★ 直前の Determine ステップの出力 should_run が 'true' の場合のみSetupを実行
+        if: steps.run-condition.outputs.should_run == 'true'
         with:
-          # 必要に応じて、Terraformのバージョンを指定
-          terraform_version: latest # 最新版を使用
+          terraform_version: latest # 使用するTerraformのバージョンを指定
 
-      # -- AWS認証情報の設定 --
-      # ★更新★ configure-aws-credentials アクションを最新バージョンに更新 (v1は非推奨)
-      - name: Setup AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          # GitHub Secretsに登録されたAWS認証情報を使用
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          # リソースを作成するAWSリージョンを指定 (例: 東京リージョン)
-          aws-region: ap-northeast-1
-          # 必要に応じて、IAMロールの引き受け設定などを追加 (よりセキュア)
-          # role-to-assume: arn:aws:iam::YOUR_AWS_ACCOUNT_ID:role/YourGitHubActionsRole
-          # web-identity-token-file: ${{ runner.temp }}/token # OIDC連携の場合
-          # role-duration-seconds: 900
-
-      # -- ディレクトリが空でないかチェック --
-      # 作業ディレクトリにTerraformコードが存在するか確認します。
-      - name: Check if directory is not empty
-        id: check_dir # IDを追加
-        # run ステップのworking-directoryはdefaultsで指定済
-        run: |
-          # 作業ディレクトリ内のファイルリストを取得し、出力が空でないかチェック
-          if [ "$(ls -A .)" ]; then
-            echo "Directory is not empty. Proceeding with Terraform checks."
-            # ディレクトリが空でないことを示す出力変数を設定 (後続ステップの条件に使用可能)
-            # echo "directory_not_empty=true" >> "$GITHUB_OUTPUT" # 必要であれば
-          else
-            echo "Directory '${{ matrix.directory }}' is empty. Skipping Terraform checks for this directory."
-            # ディレクトリが空の場合、ジョブを失敗させる (matrix戦略とfail-fast=false の組み合わせで他のディレクトリのチェックは続行)
-            exit 1
-          fi
-        shell: bash # スクリプト実行にbashを使用
-
-      # -- Terraform Format Check --
-      # コードのフォーマットが規約に従っているかチェック
-      - name: Terraform Format
-        id: fmt # IDを追加
-        # run ステップのworking-directoryはdefaultsで指定済
-        # 必要に応じて、前のステップの結果でスキップする条件を追加できます
-        # if: steps.check_dir.conclusion == 'success' # 例: ディレクトリが空でない場合のみ実行
-        run: terraform fmt -check # フォーマットエラーがあれば非ゼロ終了コードを返し、ステップが失敗します
-
-      # -- Terraform Init --
-      # Terraformプロバイダとモジュールを初期化します。
+      # Terraform Initの実行
       - name: Terraform Init
-        id: init # IDを追加
-        # run ステップのworking-directoryはdefaultsで指定済
-        # 必要に応じて、前のステップの結果でスキップする条件を追加できます
-        # if: steps.check_dir.conclusion == 'success' # 例: ディレクトリが空でない場合のみ実行
-        run: terraform init # Stateバックエンド設定はversions.tfに記述されている必要があります
+        id: init # 後続ステップで結果を参照するためのID
+        # ★設定★ TF構成ファイルが存在するディレクトリを指定 (例: プロジェクトルートの場合 '.')
+        working-directory: .
+        # ★条件★ Setupが成功した場合のみ実行
+        if: steps.setup-terraform.conclusion == 'success'
+        run: terraform init -input=false # CI環境ではユーザー入力を求めない
 
-      # -- Terraform Validate --
-      # Terraformコードの構文と構成が正しいか検証します。
+      # Terraform Validateの実行
       - name: Terraform Validate
-        id: validate # IDを追加
-        # run ステップのworking-directoryはdefaultsで指定済
-        # 必要に応じて、前のステップの結果でスキップする条件を追加できます
-        # if: steps.init.conclusion == 'success' # 例: Initが成功した場合のみ実行
+        id: validate # 後続ステップで結果を参照するためのID
+        working-directory: . # ★設定★ TF構成ファイルのルートディレクトリ
+        # ★条件★ Initが成功した場合のみ実行
+        if: steps.init.conclusion == 'success'
         run: terraform validate -no-color # カラー出力を無効化
 
-      # -- Terraform Plan --
-      # インフラストラクチャに加えられる変更の実行計画を生成します。
-      - name: Terraform Plan
-        id: plan # IDを追加
-        # run ステップのworking-directoryはdefaultsで指定済
-        # 必要に応じて、前のステップの結果でスキップする条件を追加できます
-        # if: steps.validate.conclusion == 'success' # 例: Validateが成功した場合のみ実行
+      # Terraform Planの実行
+      - name: Run terraform plan
+        id: plan # 後続ステップで結果を参照するためのID
+        working-directory: . # ★設定★ TF構成ファイルのルートディレクトリ
+        # ★条件★ Initが成功した場合のみ実行
+        if: steps.init.conclusion == 'success'
         run: terraform plan -no-color # カラー出力を無効化
-        # Planが失敗しても後続のステップ（コメント投稿など）を実行したい場合は true に設定
-        continue-on-error: true # ご提示の設定を維持
 
-      # -- Plan結果を整形してコメント投稿 --
-      # Planの結果をPull Requestにコメントとして投稿します。
-      # ★更新★ github-script アクションを最新バージョンに更新 (v3は非推奨)
-      - name: Comment PR
-        # このステップはPull Requestイベントの場合のみ実行
-        if: github.event_name == 'pull_request' && steps.plan.conclusion != 'skipped' # ★修正★ if条件をこの一行にまとめる
-        uses: actions/github-script@v7
+      # Planの結果を整形してハイライト可能なdiff形式に変換
+      # Planが成功した場合のみ実行します。
+      - name: Reformat Plan
+        id: reformat_plan # 後続ステップで結果を参照するためのID
+        # ★条件★ Planが成功した場合のみ実行
+        if: steps.plan.conclusion == 'success'
+        run: |
+          # steps.plan.outputs.stdout は Plan の標準出力、steps.plan.outputs.stderr はエラー出力
+          # Planが成功した場合(conclusion == 'success')はstdoutに計画が出力されます。
+          # sed コマンドで diff 形式に整形 (行頭のスペースと +/- を入れ替える)
+          # sed コマンドが失敗した場合を考慮して || true を追加
+          PLAN_OUTPUT="${{ steps.plan.outputs.stdout }}"
+          echo "$PLAN_OUTPUT" | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' > plan.txt || true
+        shell: bash # スクリプト実行にbashを使用することを明示
+
+      # 整形したPlanの内容を環境変数に入れる
+      # 整形ステップが成功した場合のみ実行します。
+      - name: Put Plan in Env Var
+        id: put_plan_env # 後続ステップで結果を参照するためのID
+        # ★条件★ 整形ステップが成功した場合のみ実行
+        if: steps.reformat_plan.conclusion == 'success'
+        run: |
+          # plan.txt ファイルが存在するか確認し、存在する場合のみ読み込み
+          if [ -f plan.txt ]; then
+            PLAN_CONTENT=$(cat plan.txt)
+            # GITHUB_ENV 環境変数ファイルに追記して環境変数 PLAN を設定します。
+            # ヒアドキュメント形式 (EOF) を使用します。
+            echo "PLAN<<EOF" >> "$GITHUB_ENV"
+            echo "$PLAN_CONTENT" >> "$GITHUB_ENV"
+            echo "EOF" >> "$GITHUB_ENV"
+          else
+            echo "Plan output file plan.txt not found."
+          fi
+        shell: bash # スクリプト実行にbashを使用することを明示
+
+      # PRコメントにPlanの結果を投稿
+      # PRイベントであり、かつPlan結果を環境変数に入れるステップが成功した場合のみ実行します。
+      - name: Read Plan and Post Comment
+        uses: actions/github-script@v7 # GitHub APIを操作するためのアクション
+        # ★条件★ Pull Request イベントであり、かつ Plan結果を環境変数に格納するステップが成功した場合のみ実行
+        if: github.event_name == 'pull_request' && steps.put_plan_env.conclusion == 'success'
         with:
-          # GitHub提供のデフォルトトークンを使用 (permissions設定で適切な権限が必要です)
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: | # Node.js 環境で実行されるスクリプトです。
-
-            // Plan結果を取得。成功時は stdout, 失敗時は stderr を使用。
-            // steps.<step_id>.outcome は 'success', 'failure', 'skipped', 'cancelled'
-            const planOutput = `${{ steps.plan.conclusion == 'success' && steps.plan.outputs.stdout || steps.plan.outputs.stderr }}`;
-
-            // 2. Prepare format of the comment
-            // 各ステップの結果やPlan結果を整形してコメント本文を作成します。
-            const output = `#### Terraform checks for \`${{ matrix.directory }}\`
-
-              #### Terraform Format 🖌\`${{ steps.fmt.conclusion }}\`
-              #### Terraform Initialization ⚙️\`${{ steps.init.conclusion }}\`
-              #### Terraform Validate 🤖\`${{ steps.validate.conclusion }}\`
-
-              <details><summary>Validation Output</summary>
-
-              \`\`\`terraform
-              ${{ steps.validate.outputs.stdout }} // Validate の標準出力 (失敗時は stderr の場合あり)
-              \`\`\`
-
-              </details>
-
-              #### Terraform Plan 📖\`${{ steps.plan.conclusion }}\`
-
-              <details><summary>Show Plan</summary>
-
-              \`\`\`diff
-              ${planOutput} // Planの結果 (stdout または stderr)
-              \`\`\`
-
-              </details>
-
-              *Workflow triggered by @${{ github.actor }} in directory \`${{ matrix.directory }}\`*
-              `; // コメント本文の末尾
-
-            // 3. Post or Update Comment
-            // GitHub Actions Botが過去に投稿したコメントを探し、あれば更新、なければ新規作成します。
-            // コメント内容に特定の識別子を含めると、ボットの他のコメントと区別しやすくなります。
-            // 例: const commentIdentifier = '';
-
+          github-token: ${{ secrets.GITHUB_TOKEN }} # GitHub提供のデフォルトトークンを使用
+          script: |
+            const commentIdentifier = '';
             const { data: comments } = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
             });
 
-            // 特定の識別子を含むボットコメントを検索 (必要に応じて commentIdentifier を定義)
             const botComment = comments.find(comment => {
-               // 現在はボットかつ、特定の文字列（例：'#### Terraform checks for'）を含むコメントを探す
-              return comment.user.type === 'Bot' && comment.body.includes(`#### Terraform checks for \`${{ matrix.directory }}\``);
+              return comment.user.type === 'Bot' && comment.body.includes(commentIdentifier);
             });
 
+            const output = `
+              ${commentIdentifier}
 
+              #### Terraform Format Check 🖌\`${{ steps.fmt.outcome }}\`
+              #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+              #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+
+              <details><summary>Validation Output</summary>
+
+              \`\`\`terraform
+              ${{ steps.validate.outputs.stdout }} // Validate の標準出力
+              \`\`\`
+
+              </details>
+
+              #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+
+              <details><summary>Show Plan</summary>
+
+              \`\`\`diff
+              ${{ env.PLAN }} // 環境変数に格納した整形済みPlan結果
+              \`\`\`
+
+              </details>
+
+              *Pusher: @${{ github.actor }}, Working Directory: \`${{ matrix.directory || '.' }}\`* // matrix.directory がない場合は '.' を表示
+
+              `; // コメント本文の末尾
+
+            // 3. If we have a comment, update it, otherwise create a new one
             if (botComment) {
               // 既存コメントがある場合、更新
               await github.rest.issues.updateComment({
@@ -211,42 +259,17 @@ jobs:
               });
             }
 
-      # Applyステップは含まれていません。通常PlanとApplyは別のワークフローやジョブで行います。
-      # Applyを同じジョブで行う場合は、Planステップの後に条件付きで追加します。
-      # 例: プッシュイベントかつ master ブランチの場合のみ Apply
-      # - name: Terraform Apply
-      #   if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-      #   run: terraform apply -auto-approve -input=false
+      # --- ★Applyステップ★ ---
+      # Applyは master ブランチへのPush時のみ、かつ .tf ファイルに変更があった場合のみ実行します。
+      - name: Terraform Apply
+        id: apply # 後続ステップで結果を参照するためのID
+        working-directory: . # ★設定★ TF構成ファイルのルートディレクトリ (必要に応じて修正)
+        # ★条件★ Pushイベント AND masterブランチ AND .tf変更あり AND Init成功の場合のみ実行
+        # .tf変更の有無は check-tf-changes ステップの出力で判断します。
+        if: |
+          github.event_name == 'push' &&
+          github.ref == 'refs/heads/master' &&
+          steps.check-tf-changes.outputs.tf-changes == 'true' &&
+          steps.init.conclusion == 'success'
 
-
-# Apply ジョブを別途定義する例 (Plan ジョブとは別にする推奨構成)
-# Plan ジョブが成功した場合にトリガーするなども可能です。
-# jobs:
-#   terraform-apply:
-#     needs: terraform-checks # 必要に応じて plan ジョブの成功に依存させる
-#     if: github.event_name == 'push' && github.ref == 'refs/heads/master' # Push to master でトリガー
-#     runs-on: ubuntu-latest
-#     strategy:
-#       matrix:
-#         directory: ['environments/dev'] # Applyしたいディレクトリを指定
-#     defaults:
-#       run:
-#         working-directory: ${{ matrix.directory }}
-#     permissions: # Apply に必要な AWS 権限などをここで設定
-#       contents: read
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v4
-#       - name: Setup Terraform
-#         uses: hashicorp/setup-terraform@v3
-#       - name: Setup AWS Credentials
-#         uses: aws-actions/configure-aws-credentials@v4
-#         with:
-#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           aws-region: ap-northeast-1
-#       - name: Terraform Init (Apply用)
-#         run: terraform init
-#         # State バックエンドの設定をここでも正しく行う必要があります。
-#       - name: Terraform Apply
-#         run: terraform apply -auto-approve -input=false
+        run: terraform apply -auto-approve -input=false # -auto-approve は確認なしに実行。本番環境では慎重に。
