--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -162,7 +162,7 @@ jobs:
         # ★追加★ このステップでエラーが発生してもワークフローを続行する
         continue-on-error: true
         with:
-          terraform_version: latest # または特定のバージョン (例: 1.7.5) を試す
+          terraform_version: 1.7.5 # ★修正★ ここを特定のバージョンに固定
 
       # Terraform Initの実行
       - name: Terraform Init
