--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -159,7 +159,7 @@ jobs:
       # --- Setup Terraform (サイレント失敗の可能性あり) ---
       # Terraform CLI をセットアップします。
 
-      # ★デバッグ★ Setup Terraform 実行前の環境情報 (残しておくと診断に役立ちます)
+      # ★デバッグ★ Setup Terraform 実行前の環境情報 (原因特定に役立ちます)
       - name: Debug Setup Terraform Environment
         run: |
           echo "DEBUG: PATH before setup: $PATH"
@@ -168,23 +168,24 @@ jobs:
           echo "DEBUG: Current directory: $(pwd)"
         shell: bash
 
-      # Setup Terraform 本体 (アクションバージョンを @v4 に変更)
+      # Setup Terraform 本体 (アクションバージョンを @v4 のコミットSHAで指定)
       - name: Setup Terraform
-        # ★修正★ uses: hashicorp/setup-terraform@v4 に変更
-        uses: hashicorp/setup-terraform@v4
+        # ★修正★ uses: hashicorp/setup-terraform@v4 をコミットSHAで指定
+        # Missing download info エラーを回避するため、SHAで直接指定します。
+        uses: hashicorp/setup-terraform@b58149304c83f1ac8d26223492efb20331a91e93 # v4 のコミットSHA
         # continue-on-error: true は、Setupが成功しなかった場合に後続のデバッグステップで結論を確認するために残しておくと良いです。
         continue-on-error: true
 
         with:
-          # 1.7.5 で Setup が success になるか @v4 で確認します。
-          terraform_version: 1.7.5 # ← バージョンは一旦このまま試します
+          # バージョンは一旦 1.7.5 のまま試します
+          terraform_version: 1.7.5 # ← バージョンはそのまま
           # 必要に応じて他のwith設定を追加 (YAMLのインデントに注意)
           # cli_config_credentials_hostname: app.terraform.io
           # terraform_wrapper: true
 
         # 環境変数はジョブレベルで設定済みのため、ここでは不要です。
 
-      # ★デバッグ★ Setup Terraform 実行後の結果と環境情報 (残しておくと診断に役立ちます)
+      # ★デバッグ★ Setup Terraform 実行後の結果と環境情報 (原因特定に役立ちます)
       - name: Debug Setup Terraform Outcome
         # Setup ステップが continue-on-error: true のため、Setupが失敗してもこのステップは実行されます。
         run: |
