--- a/.github/workflows/plan.yaml
+++ b/.github/workflows/plan.yaml
@@ -57,6 +57,7 @@ jobs:
         run: |
           terraform init -backend=true -reconfigure
           terraform plan -no-color | tee plan.txt # 出力をファイルに保存して色を消す
+        working-directory: ./envs/dev/souvenirConsultApp/
 
       # 差分がある場合のみPlan結果をPRにコメント
       - name: Add Plan comment to PR
@@ -145,6 +146,7 @@ jobs:
         run: |
           terraform init -backend=true -reconfigure
           terraform plan -no-color | tee plan.txt # 出力をファイルに保存して色を消す
+        working-directory: ./envs/dev/souvenirConsultApp/
 
       - name: Add Plan comment to PR
         uses: actions/github-script@v7
